objects/EXPRN__Exp_Business_Info__c.object
<CustomObject>
    <description>Stores business related informations</description>
    <fields>
        <fullName>ACV_Tax_Lien__c</fullName>
        <description>Converts Tax Lien Filings from text to number.  Used in ACV Decisioning Logic</description>
        <formula>VALUE( EXPRN__Experian_Lien_Bal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV Tax Lien</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BI_Score__c</fullName>
        <description>Used to convert Intelliscore Plus from text to a number. Created for decisioning logic</description>
        <formula>VALUE( EXPRN__Intelliscore_Plus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BI Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_City__c</fullName>
        <label>Branch City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_State__c</fullName>
        <label>Branch State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Street__c</fullName>
        <label>Branch Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Zip_Extension__c</fullName>
        <label>Branch Zip Extension</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Zip__c</fullName>
        <label>Branch Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Facts_Success__c</fullName>
        <label>Business Facts Success</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Balance__c</fullName>
        <label>Collection Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commercial_Score_Definition__c</fullName>
        <label>Commercial Score Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Score_Quarter__c</fullName>
        <label>Commercial Score Quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Score__c</fullName>
        <label>Commercial Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Linkage_Indicator__c</fullName>
        <label>Corporate Linkage Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Type__c</fullName>
        <label>Corporate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Debt__c</fullName>
        <label>Current Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Experian Business Informations</relationshipLabel>
        <relationshipName>Experian_Business_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Active_Business_Indicator_Description__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <description>Active Business Indicator Description</description>
        <label>Active Business Indicator Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Active_Business_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Business Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_0130__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Additional 01-30</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_3160__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Additional 31-60</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_6190__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Additional 61-90</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_Balance__c</fullName>
        <defaultValue>&apos;$0&apos;</defaultValue>
        <label>Additional Balance</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_Current__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Additional Current</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_DBT__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Additional DBT</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_Lines_Reported__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Additional Lines Reported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_Recent_High_Credit__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Additional Recent High Credit</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__All_Collections_Count__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>All Collections Count</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__All_Trades_Count__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>All Trades Count</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__All_collections_147__c</fullName>
        <defaultValue>&apos;$0&apos;</defaultValue>
        <label>All collections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__All_trades_513__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>All trades</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Average_Balance_Previous_5_Quarters__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Average Balance Previous 5 Quarters</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Bal_of_Legal_Filings__c</fullName>
        <label>Bal. of Legal Filings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Bank_Information__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Bank Information</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Bankruptcy_Filings__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Bankruptcy Filings</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Bankruptcy__c</fullName>
        <label>Bankruptcy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Business_Description__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Business Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Business_Size__c</fullName>
        <label>Business Size</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Profit</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Business_Victim_Statement__c</fullName>
        <label>Business Victim Statement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__COMB_ACCT_BAL_MSK__c</fullName>
        <label>COMB_ACCT_BAL_MSK</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__COMB_HI_CR_MSK__c</fullName>
        <label>COMB_HI_CR_MSK</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Cautionary__c</fullName>
        <label>Cautionary UCC filings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Collection_filings__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Collection filings</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_0130__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Combined Trade 01-30</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_3160__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Combined Trade 31-60</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_6190__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Combined Trade 61-90</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_Balance__c</fullName>
        <defaultValue>&apos;$0&apos;</defaultValue>
        <label>Combined Trade Balance</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_Current__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Combined Trade Current</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_DBT__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Combined Trade DBT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_Lines_Reported__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Combined Trade Lines Reported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_Recent_High_Credit__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Combined Trade Recent High Credit</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Company_DBT__c</fullName>
        <defaultValue>IF( $RecordType.DeveloperName = &apos;Intelliscore&apos;, &apos;0&apos;, &apos;N/A&apos;)</defaultValue>
        <label>Days Beyond Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Contacts__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Contacts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_0130__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Continuous 01-30</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_3160__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Continuous 31-60</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_6190__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Continuous 61-90</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_Balance__c</fullName>
        <defaultValue>&apos;$0&apos;</defaultValue>
        <label>Continuous Balance</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_Current__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Continuous Current</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_DBT__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Continuous DBT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_Lines_Reported__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Continuous Lines Reported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_Recent_High_Credit__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Continuous Recent High Credit</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_Trade_Code__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Continuous Trade Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_trade_309__c</fullName>
        <defaultValue>&apos;$0&apos;</defaultValue>
        <label>Continuous trade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Limit_Recommendation__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Credit Limit Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Snapshot_Date__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Credit Snapshot Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Currency__c</fullName>
        <label>Currency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Current_DBT__c</fullName>
        <defaultValue>IF( $RecordType.DeveloperName = &apos;Intelliscore&apos;, &apos;0&apos;, &apos;Not Available&apos;)</defaultValue>
        <label>Current DBT</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Current_Record__c</fullName>
        <description>Mark the latest record with &apos;Y&apos;</description>
        <label>Current Record</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <default>true</default>
                    <label>Y</label>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__DBA_Doing_Business_As__c</fullName>
        <label>DBA (Doing Business As)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__DB_UPD_SRC_TY__c</fullName>
        <label>DB_UPD_SRC_TY</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__DB_UPD_TS__c</fullName>
        <label>DB_UPD_TS</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__DB_UPD_USER_ID__c</fullName>
        <label>DB_UPD_USER_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Date_of_Incorporation__c</fullName>
        <defaultValue>&apos;Not Available&apos;</defaultValue>
        <label>Date of Incorporation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__EMP_SZ_CD__c</fullName>
        <label>EMP_SZ_CD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Business_Name__c</fullName>
        <label>Experian Business Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to experian Business object</description>
        <label>Experian Business</label>
        <referenceTo>EXPRN__Experian_Business__c</referenceTo>
        <relationshipLabel>Experian Business Informations</relationshipLabel>
        <relationshipName>Experian_Business_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_City_Name__c</fullName>
        <label>City Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_STATE__c</fullName>
        <label>STATE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_ZIP__c</fullName>
        <label>ZIP</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Avg_Bal_Last_5Q__c</fullName>
        <label>Experian Avg Bal Last 5Q</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Bankruptcy_Count__c</fullName>
        <label>Experian Bankruptcy Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Judgment_Bal__c</fullName>
        <label>Experian Judgment Bal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Lien_Bal__c</fullName>
        <label>Experian Lien Bal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Median_Credit__c</fullName>
        <label>Experian Median Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_No_Collections__c</fullName>
        <label>Experian No. Collections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_No_Combined_Tradelines__c</fullName>
        <label>Experian No. Combined Tradelines</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_No_Inquiries__c</fullName>
        <label>Experian No. Inquiries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_No_Judgments__c</fullName>
        <label>Experian No. Judgments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_No_Liens__c</fullName>
        <label>Experian No. Liens</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Non_Profit_Indicator__c</fullName>
        <label>Experian Non-Profit Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Public_Company_Indicator__c</fullName>
        <label>Experian Public Company Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Website__c</fullName>
        <label>Business Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EXPRN__FSR_Risk_Class__c</fullName>
        <label>FSR Risk Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__FSR_Score_Change__c</fullName>
        <label>FSR Score Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__FSR_Score__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>FSR Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Filing_Status__c</fullName>
        <defaultValue>&apos;Not Available&apos;</defaultValue>
        <label>Filing Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Financial_Stability_Risk__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Financial Stability Risk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Fortune_1000_Ranking__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Fortune 1000 Ranking</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__High_Risk_Alerts__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Fraud Alerts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Highest_DBT_Previous_5_Quarters__c</fullName>
        <defaultValue>IF( $RecordType.DeveloperName = &apos;Intelliscore&apos;, &apos;0&apos;, &apos;N/A&apos;)</defaultValue>
        <label>Highest DBT Previous 5 Quarters</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Highest_DBT_Previous_6_Months__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Highest DBT Previous 6 Months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Highest_credit_amount_extended__c</fullName>
        <defaultValue>IF( $RecordType.DeveloperName = &apos;Intelliscore&apos;, &apos;$0&apos;, &apos;N/A&apos;)</defaultValue>
        <label>Highest credit amount extended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Industry_DBT__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Industry DBT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Industry_Payment_Comparison__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Industry Payment Comparison</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Inquiry_Date__c</fullName>
        <label>Inquiry Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Intelliscore_Plus__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Intelliscore Plus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Intelliscore_Risk_Class__c</fullName>
        <label>Intelliscore Risk Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Judgment_filings__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Judgment filings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__LeadName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Name</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Experian Business Informations</relationshipLabel>
        <relationshipName>Experian_Business_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__MSTR_ACCT_BAL_AM__c</fullName>
        <label>MSTR_ACCT_BAL_AM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Model_Score__c</fullName>
        <label>Model Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Model_Type__c</fullName>
        <label>Model Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Monthly_Average_DBT__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Monthly Average DBT</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Most_frequent_industry_purchasing_terms__c</fullName>
        <defaultValue>&apos;Industry purchasing terms not available&apos;</defaultValue>
        <label>Most frequent industry purchasing terms</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__NACE_Code__c</fullName>
        <label>NACE Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__NAICS_Code__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__NEW_ACCT_BAL_MSK__c</fullName>
        <label>NEW_ACCT_BAL_MSK</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__NEW_CUR_BAL_AM__c</fullName>
        <label>NEW_CUR_BAL_AM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__NEW_HI_CR_MSK__c</fullName>
        <label>NEW_HI_CR_MSK</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__NEW_TRD_LN_CT__c</fullName>
        <label>NEW_TRD_LN_CT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_0130__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>New 01-30</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_3160__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>New 31-60</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_6190__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>New 61-90</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_Balance__c</fullName>
        <defaultValue>&apos;$0&apos;</defaultValue>
        <label>New Balance</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_Current__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>New Current</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_DBT__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>New DBT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_Lines_Reported__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>New Lines Reported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_Recent_High_Credit__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>New Recent High Credit</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__No_of_Legal_Filings__c</fullName>
        <label>No. of Legal Filings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Number_of_Employees__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Number of Employees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__ORGCUSTOM4_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORGCUSTOM4_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__ORGCUSTOM4_OLD_NAME__c</fullName>
        <label>ORGCUSTOM4_OLD_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__On_File_Since__c</fullName>
        <label>On File Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__OpportunityName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Experian Business Informations</relationshipLabel>
        <relationshipName>Experian_Business_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Original_Filings__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Derogatory Legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Guarantor2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>2nd Owner guarontor information</description>
        <label>Owner/Guarantor 2</label>
        <referenceTo>EXPRN__Owner_Grant__c</referenceTo>
        <relationshipLabel>Experian Business Informations (Owner/Guarantor 2)</relationshipLabel>
        <relationshipName>Experian_Business_Informations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Guarantor_Lead_Opp_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Guarantor Lead Opp 2</label>
        <referenceTo>EXPRN__Owner_Guarantor_Lead_and_Opp__c</referenceTo>
        <relationshipLabel>Experian Business Informations (Owner Guarantor Lead Opp 2)</relationshipLabel>
        <relationshipName>Experian_Business_Informations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Guarantor_Lead_Opp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Guarantor Lead Opp</label>
        <referenceTo>EXPRN__Owner_Guarantor_Lead_and_Opp__c</referenceTo>
        <relationshipLabel>Experian Business Informations</relationshipLabel>
        <relationshipName>Experian_Business_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Owner/Guarantor</description>
        <label>Owner/Guarantor</label>
        <referenceTo>EXPRN__Owner_Grant__c</referenceTo>
        <relationshipLabel>Experian Business Informations</relationshipLabel>
        <relationshipName>Experian_Business_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Payment_Trend_Indication__c</fullName>
        <defaultValue>&apos;Payment trend indicator not available&apos;</defaultValue>
        <label>Payment Trend Indication</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Possible_OFAC_Match__c</fullName>
        <label>Possible OFAC Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Predicted_DBT_Date__c</fullName>
        <label>Predicted DBT Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Predicted_DBT_as_03_04_2015__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Predicted DBT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Public_Company__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Public Company</label>
        <length>120</length>
        <type>Text</type>
    </fields>
</CustomObject>